--- a/src/components/AddingForm/AddingForm.css
+++ b/src/components/AddingForm/AddingForm.css
@@ -17,3 +17,8 @@
   border: 1px solid var(--bs-white);
   color: var(--bs-white);
 }
+
+.btn:hover {
+  background-color: var(--bs-white);
+  color: var(--bs-black);
+}
